# rp

./: .env  Cargo.toml  README.txt  ed25519_private.pem  ed25519_public.pem
migrations/: 20250426111612_UsersTable.sql  20250501091603_refresh-tokens.sql  20250503142025_users-table.down.sql  20250503142025_users-table.up.sql  20250503142301_refresh-table.down.sql  20250503142301_refresh-table.up.sql
src/: handlers.rs  lib.rs  main.rs  models.rs
src/middlewares/: auth_layer.rs  mod.rs  tokens_layer.rs
src/services/: aesgcm_service.rs  argon2_service.rs  database_service.rs  jwt_service.rs  mod.rs  redis_service.rs  time_service.rs
src/static/: Decentralized.pptx  Texts.docx  secret_message.txt
tests/: aes_test.rs  database_test.rs
