[package]
name = "rp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
axum = "0.8.3"
tokio = {version = "1.44.2", features = ["full"]}
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
jsonwebtoken = "9.3.1"
uuid = "1.16"
thiserror = "2"
argon2 = "0.5.3"
aes = "0.8"
aes-gcm = "0.10"
tower = {version = "0.5.2", features = ["full"]}
tower-http = { version = "0.6.2", features = ["trace", "compression-full", "fs"] }
http = "1.3.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
tracing = "0.1.41"
chrono = "0.4.40"
rand = "0.9.1"