[package]
name = "rp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
axum = "0.8.4"
tokio = {version = "1.44.2", features = ["full"]}
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
jsonwebtoken = "9.3.1"
uuid ={ version = "1.16.0", features = ["v4"] } 
thiserror = "2"
argon2 = "0.5.3"
aes = "0.8"
aes-gcm = "0.10"
tower = {version = "0.5.2", features = ["full"]}
tower-http = { version = "0.6.2", features = ["trace", "compression-full", "fs"] }
http = "1.3.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "chrono"] }
tracing = "0.1.41"
chrono = "0.4.41"
rand = "0.9.1"
futures = "0.3.31"
futures-util = "0.3.31"
cookie = "0.18.1"
axum-extra = {version = "0.10.0", features = ["cookie"]}
deadpool-redis = "0.20.0"
redis = { version = "0.30.0", features = ["tokio-comp"] }


[dev-dependencies]
pretty_assertions = "1.4.1"